Small fixes, percent overlap bars

--- a/assets/css/extra.css
+++ b/assets/css/extra.css
@@ -212,6 +212,63 @@ ul li{
     font-weight: bold;
 }
 
+.stats-percent {
+    display:inline-block;
+    background-color:rgb(180,180,180);
+    border-radius:5px;
+    vertical-align:middle;
+    padding:0;
+    margin:2px;
+    position:relative;
+    overflow:hidden;
+}
+
+.stats-percent span {
+    background-color:rgb(0,172,71);
+    width:var(--data-width);
+    height:100%;
+    position:absolute;
+    left:0;
+    top:0;
+}
+
+.stats-percent p {
+    color:white;
+    text-align:center;
+    width:100%;
+    height:100%;
+    position:absolute;
+    left:0;
+    top:0;
+}
+
+.stats-percent-gb span {
+    background-color:#319FD3;
+}
+
+.stats-percent-comparison span {
+    background-color:rgb(255,0,0);
+}
+
+.link {
+    cursor:pointer; 
+    color:rgb(240, 179, 35); 
+    padding:2px;
+}
+
+.link:hover {
+    text-decoration: underline;
+}
+
+.gb-link {
+    color:#319FD3; 
+}
+
+.comparison-link {
+    color:rgb(255,0,0); 
+}
+
+
 
 
 .popup {
